Project6/Project6/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    WHITESPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> <empty>
Rule 3     statements -> statements statement
Rule 4     statement -> scopeupbro { statements }
Rule 5     statement -> COMMAND_BREAK ;
Rule 6     scopeupbro -> <empty>
Rule 7     statement -> ;
Rule 8     statement -> expression ;
Rule 9     statement -> declaration ;
Rule 10    statement -> print_statement ;
Rule 11    print_statement -> COMMAND_PRINT ( non_empty_comma_sep_expr )
Rule 12    non_empty_comma_sep_expr -> expression
Rule 13    non_empty_comma_sep_expr -> expression , non_empty_comma_sep_expr
Rule 14    declaration -> simple_declaration
Rule 15    declaration -> assign_declaration
Rule 16    simple_declaration -> type ID
Rule 17    assign_declaration -> simple_declaration = expression
Rule 18    statement -> COMMAND_IF ( expression ) statement
Rule 19    statement -> COMMAND_IF ( expression ) statement COMMAND_ELSE statement
Rule 20    statement -> COMMAND_WHILE ( expression ) statement
Rule 21    var_usage -> ID
Rule 22    var_usage -> ID [ expression ]
Rule 23    expression -> var_usage = expression
Rule 24    expression -> expression . ID ( )
Rule 25    expression -> expression . ID ( expression )
Rule 26    expression -> var_usage ASSIGN_ADD expression
Rule 27    expression -> var_usage ASSIGN_SUB expression
Rule 28    expression -> var_usage ASSIGN_MULT expression
Rule 29    expression -> var_usage ASSIGN_DIV expression
Rule 30    expression -> var_usage
Rule 31    expression -> COMMAND_RANDOM ( expression )
Rule 32    type -> TYPE
Rule 33    type -> ALIAS_TYPE
Rule 34    type -> META_TYPE ( TYPE )
Rule 35    expression -> expression BOOL_AND expression
Rule 36    expression -> expression BOOL_OR expression
Rule 37    expression -> VAL_LITERAL
Rule 38    expression -> CHAR_LITERAL
Rule 39    expression -> STRING_LITERAL
Rule 40    expression -> expression - expression
Rule 41    expression -> expression * expression
Rule 42    expression -> expression / expression
Rule 43    expression -> expression + expression
Rule 44    expression -> expression COMP_EQU expression
Rule 45    expression -> expression COMP_NEQU expression
Rule 46    expression -> - expression
Rule 47    expression -> ! expression
Rule 48    expression -> expression COMP_LESS expression
Rule 49    expression -> expression COMP_GTR expression
Rule 50    expression -> expression COMP_LTE expression
Rule 51    expression -> expression COMP_GTE expression
Rule 52    expression -> ( expression )

Terminals, with rules where they appear

!                    : 47
(                    : 11 18 19 20 24 25 31 34 52
)                    : 11 18 19 20 24 25 31 34 52
*                    : 41
+                    : 43
,                    : 13
-                    : 40 46
.                    : 24 25
/                    : 42
;                    : 5 7 8 9 10
=                    : 17 23
ALIAS_TYPE           : 33
ASSIGN_ADD           : 26
ASSIGN_DIV           : 29
ASSIGN_MULT          : 28
ASSIGN_SUB           : 27
BOOL_AND             : 35
BOOL_OR              : 36
CHAR_LITERAL         : 38
COMMAND_BREAK        : 5
COMMAND_ELSE         : 19
COMMAND_IF           : 18 19
COMMAND_PRINT        : 11
COMMAND_RANDOM       : 31
COMMAND_WHILE        : 20
COMMENT              : 
COMP_EQU             : 44
COMP_GTE             : 51
COMP_GTR             : 49
COMP_LESS            : 48
COMP_LTE             : 50
COMP_NEQU            : 45
ID                   : 16 21 22 24 25
META_TYPE            : 34
STRING_LITERAL       : 39
TYPE                 : 32 34
VAL_LITERAL          : 37
WHITESPACE           : 
[                    : 22
]                    : 22
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

assign_declaration   : 15
declaration          : 9
expression           : 8 12 13 17 18 19 20 22 23 24 25 25 26 27 28 29 31 35 35 36 36 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 48 49 49 50 50 51 51 52
non_empty_comma_sep_expr : 11 13
print_statement      : 10
program              : 0
scopeupbro           : 4
simple_declaration   : 14 17
statement            : 3 18 19 19 20
statements           : 1 3 4
type                 : 16
var_usage            : 23 26 27 28 29 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> .
    (3) statements -> . statements statement

    COMMAND_BREAK   reduce using rule 2 (statements -> .)
    ;               reduce using rule 2 (statements -> .)
    COMMAND_IF      reduce using rule 2 (statements -> .)
    COMMAND_WHILE   reduce using rule 2 (statements -> .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> .)
    VAL_LITERAL     reduce using rule 2 (statements -> .)
    CHAR_LITERAL    reduce using rule 2 (statements -> .)
    STRING_LITERAL  reduce using rule 2 (statements -> .)
    -               reduce using rule 2 (statements -> .)
    !               reduce using rule 2 (statements -> .)
    (               reduce using rule 2 (statements -> .)
    COMMAND_PRINT   reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    TYPE            reduce using rule 2 (statements -> .)
    ALIAS_TYPE      reduce using rule 2 (statements -> .)
    META_TYPE       reduce using rule 2 (statements -> .)
    {               reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    statements                     shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . scopeupbro { statements }
    (5) statement -> . COMMAND_BREAK ;
    (7) statement -> . ;
    (8) statement -> . expression ;
    (9) statement -> . declaration ;
    (10) statement -> . print_statement ;
    (18) statement -> . COMMAND_IF ( expression ) statement
    (19) statement -> . COMMAND_IF ( expression ) statement COMMAND_ELSE statement
    (20) statement -> . COMMAND_WHILE ( expression ) statement
    (6) scopeupbro -> .
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (14) declaration -> . simple_declaration
    (15) declaration -> . assign_declaration
    (11) print_statement -> . COMMAND_PRINT ( non_empty_comma_sep_expr )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]
    (16) simple_declaration -> . type ID
    (17) assign_declaration -> . simple_declaration = expression
    (32) type -> . TYPE
    (33) type -> . ALIAS_TYPE
    (34) type -> . META_TYPE ( TYPE )

    $end            reduce using rule 1 (program -> statements .)
    COMMAND_BREAK   shift and go to state 24
    ;               shift and go to state 8
    COMMAND_IF      shift and go to state 14
    COMMAND_WHILE   shift and go to state 17
    {               reduce using rule 6 (scopeupbro -> .)
    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    COMMAND_PRINT   shift and go to state 18
    ID              shift and go to state 22
    TYPE            shift and go to state 9
    ALIAS_TYPE      shift and go to state 5
    META_TYPE       shift and go to state 10

    declaration                    shift and go to state 23
    print_statement                shift and go to state 19
    scopeupbro                     shift and go to state 13
    simple_declaration             shift and go to state 20
    assign_declaration             shift and go to state 11
    statement                      shift and go to state 4
    var_usage                      shift and go to state 15
    expression                     shift and go to state 6
    type                           shift and go to state 16

state 2

    (0) S' -> program .



state 3

    (37) expression -> VAL_LITERAL .

    .               reduce using rule 37 (expression -> VAL_LITERAL .)
    BOOL_AND        reduce using rule 37 (expression -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 37 (expression -> VAL_LITERAL .)
    -               reduce using rule 37 (expression -> VAL_LITERAL .)
    *               reduce using rule 37 (expression -> VAL_LITERAL .)
    /               reduce using rule 37 (expression -> VAL_LITERAL .)
    +               reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_LESS       reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_GTR        reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 37 (expression -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 37 (expression -> VAL_LITERAL .)
    ;               reduce using rule 37 (expression -> VAL_LITERAL .)
    )               reduce using rule 37 (expression -> VAL_LITERAL .)
    ,               reduce using rule 37 (expression -> VAL_LITERAL .)
    ]               reduce using rule 37 (expression -> VAL_LITERAL .)


state 4

    (3) statements -> statements statement .

    }               reduce using rule 3 (statements -> statements statement .)
    COMMAND_BREAK   reduce using rule 3 (statements -> statements statement .)
    ;               reduce using rule 3 (statements -> statements statement .)
    COMMAND_IF      reduce using rule 3 (statements -> statements statement .)
    COMMAND_WHILE   reduce using rule 3 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 3 (statements -> statements statement .)
    CHAR_LITERAL    reduce using rule 3 (statements -> statements statement .)
    STRING_LITERAL  reduce using rule 3 (statements -> statements statement .)
    -               reduce using rule 3 (statements -> statements statement .)
    !               reduce using rule 3 (statements -> statements statement .)
    (               reduce using rule 3 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    TYPE            reduce using rule 3 (statements -> statements statement .)
    ALIAS_TYPE      reduce using rule 3 (statements -> statements statement .)
    META_TYPE       reduce using rule 3 (statements -> statements statement .)
    {               reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 5

    (33) type -> ALIAS_TYPE .

    ID              reduce using rule 33 (type -> ALIAS_TYPE .)


state 6

    (8) statement -> expression . ;
    (24) expression -> expression . . ID ( )
    (25) expression -> expression . . ID ( expression )
    (35) expression -> expression . BOOL_AND expression
    (36) expression -> expression . BOOL_OR expression
    (40) expression -> expression . - expression
    (41) expression -> expression . * expression
    (42) expression -> expression . / expression
    (43) expression -> expression . + expression
    (44) expression -> expression . COMP_EQU expression
    (45) expression -> expression . COMP_NEQU expression
    (48) expression -> expression . COMP_LESS expression
    (49) expression -> expression . COMP_GTR expression
    (50) expression -> expression . COMP_LTE expression
    (51) expression -> expression . COMP_GTE expression

    ;               shift and go to state 28
    .               shift and go to state 31
    BOOL_AND        shift and go to state 29
    BOOL_OR         shift and go to state 38
    -               shift and go to state 33
    *               shift and go to state 36
    /               shift and go to state 37
    +               shift and go to state 32
    COMP_EQU        shift and go to state 35
    COMP_NEQU       shift and go to state 41
    COMP_LESS       shift and go to state 39
    COMP_GTR        shift and go to state 40
    COMP_LTE        shift and go to state 34
    COMP_GTE        shift and go to state 30


state 7

    (39) expression -> STRING_LITERAL .

    .               reduce using rule 39 (expression -> STRING_LITERAL .)
    BOOL_AND        reduce using rule 39 (expression -> STRING_LITERAL .)
    BOOL_OR         reduce using rule 39 (expression -> STRING_LITERAL .)
    -               reduce using rule 39 (expression -> STRING_LITERAL .)
    *               reduce using rule 39 (expression -> STRING_LITERAL .)
    /               reduce using rule 39 (expression -> STRING_LITERAL .)
    +               reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_EQU        reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_NEQU       reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_LESS       reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_GTR        reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_LTE        reduce using rule 39 (expression -> STRING_LITERAL .)
    COMP_GTE        reduce using rule 39 (expression -> STRING_LITERAL .)
    ;               reduce using rule 39 (expression -> STRING_LITERAL .)
    )               reduce using rule 39 (expression -> STRING_LITERAL .)
    ,               reduce using rule 39 (expression -> STRING_LITERAL .)
    ]               reduce using rule 39 (expression -> STRING_LITERAL .)


state 8

    (7) statement -> ; .

    COMMAND_BREAK   reduce using rule 7 (statement -> ; .)
    ;               reduce using rule 7 (statement -> ; .)
    COMMAND_IF      reduce using rule 7 (statement -> ; .)
    COMMAND_WHILE   reduce using rule 7 (statement -> ; .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> ; .)
    VAL_LITERAL     reduce using rule 7 (statement -> ; .)
    CHAR_LITERAL    reduce using rule 7 (statement -> ; .)
    STRING_LITERAL  reduce using rule 7 (statement -> ; .)
    -               reduce using rule 7 (statement -> ; .)
    !               reduce using rule 7 (statement -> ; .)
    (               reduce using rule 7 (statement -> ; .)
    COMMAND_PRINT   reduce using rule 7 (statement -> ; .)
    ID              reduce using rule 7 (statement -> ; .)
    TYPE            reduce using rule 7 (statement -> ; .)
    ALIAS_TYPE      reduce using rule 7 (statement -> ; .)
    META_TYPE       reduce using rule 7 (statement -> ; .)
    {               reduce using rule 7 (statement -> ; .)
    $end            reduce using rule 7 (statement -> ; .)
    }               reduce using rule 7 (statement -> ; .)
    COMMAND_ELSE    reduce using rule 7 (statement -> ; .)


state 9

    (32) type -> TYPE .

    ID              reduce using rule 32 (type -> TYPE .)


state 10

    (34) type -> META_TYPE . ( TYPE )

    (               shift and go to state 42


state 11

    (15) declaration -> assign_declaration .

    ;               reduce using rule 15 (declaration -> assign_declaration .)


state 12

    (47) expression -> ! . expression
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 43

state 13

    (4) statement -> scopeupbro . { statements }

    {               shift and go to state 44


state 14

    (18) statement -> COMMAND_IF . ( expression ) statement
    (19) statement -> COMMAND_IF . ( expression ) statement COMMAND_ELSE statement

    (               shift and go to state 45


state 15

    (23) expression -> var_usage . = expression
    (26) expression -> var_usage . ASSIGN_ADD expression
    (27) expression -> var_usage . ASSIGN_SUB expression
    (28) expression -> var_usage . ASSIGN_MULT expression
    (29) expression -> var_usage . ASSIGN_DIV expression
    (30) expression -> var_usage .

    =               shift and go to state 47
    ASSIGN_ADD      shift and go to state 46
    ASSIGN_SUB      shift and go to state 48
    ASSIGN_MULT     shift and go to state 50
    ASSIGN_DIV      shift and go to state 49
    .               reduce using rule 30 (expression -> var_usage .)
    BOOL_AND        reduce using rule 30 (expression -> var_usage .)
    BOOL_OR         reduce using rule 30 (expression -> var_usage .)
    -               reduce using rule 30 (expression -> var_usage .)
    *               reduce using rule 30 (expression -> var_usage .)
    /               reduce using rule 30 (expression -> var_usage .)
    +               reduce using rule 30 (expression -> var_usage .)
    COMP_EQU        reduce using rule 30 (expression -> var_usage .)
    COMP_NEQU       reduce using rule 30 (expression -> var_usage .)
    COMP_LESS       reduce using rule 30 (expression -> var_usage .)
    COMP_GTR        reduce using rule 30 (expression -> var_usage .)
    COMP_LTE        reduce using rule 30 (expression -> var_usage .)
    COMP_GTE        reduce using rule 30 (expression -> var_usage .)
    ;               reduce using rule 30 (expression -> var_usage .)
    )               reduce using rule 30 (expression -> var_usage .)
    ,               reduce using rule 30 (expression -> var_usage .)
    ]               reduce using rule 30 (expression -> var_usage .)


state 16

    (16) simple_declaration -> type . ID

    ID              shift and go to state 51


state 17

    (20) statement -> COMMAND_WHILE . ( expression ) statement

    (               shift and go to state 52


state 18

    (11) print_statement -> COMMAND_PRINT . ( non_empty_comma_sep_expr )

    (               shift and go to state 53


state 19

    (10) statement -> print_statement . ;

    ;               shift and go to state 54


state 20

    (14) declaration -> simple_declaration .
    (17) assign_declaration -> simple_declaration . = expression

    ;               reduce using rule 14 (declaration -> simple_declaration .)
    =               shift and go to state 55


state 21

    (52) expression -> ( . expression )
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 56

state 22

    (21) var_usage -> ID .
    (22) var_usage -> ID . [ expression ]

    =               reduce using rule 21 (var_usage -> ID .)
    ASSIGN_ADD      reduce using rule 21 (var_usage -> ID .)
    ASSIGN_SUB      reduce using rule 21 (var_usage -> ID .)
    ASSIGN_MULT     reduce using rule 21 (var_usage -> ID .)
    ASSIGN_DIV      reduce using rule 21 (var_usage -> ID .)
    ]               reduce using rule 21 (var_usage -> ID .)
    .               reduce using rule 21 (var_usage -> ID .)
    BOOL_AND        reduce using rule 21 (var_usage -> ID .)
    BOOL_OR         reduce using rule 21 (var_usage -> ID .)
    -               reduce using rule 21 (var_usage -> ID .)
    *               reduce using rule 21 (var_usage -> ID .)
    /               reduce using rule 21 (var_usage -> ID .)
    +               reduce using rule 21 (var_usage -> ID .)
    COMP_EQU        reduce using rule 21 (var_usage -> ID .)
    COMP_NEQU       reduce using rule 21 (var_usage -> ID .)
    COMP_LESS       reduce using rule 21 (var_usage -> ID .)
    COMP_GTR        reduce using rule 21 (var_usage -> ID .)
    COMP_LTE        reduce using rule 21 (var_usage -> ID .)
    COMP_GTE        reduce using rule 21 (var_usage -> ID .)
    )               reduce using rule 21 (var_usage -> ID .)
    ;               reduce using rule 21 (var_usage -> ID .)
    ,               reduce using rule 21 (var_usage -> ID .)
    [               shift and go to state 57


state 23

    (9) statement -> declaration . ;

    ;               shift and go to state 58


state 24

    (5) statement -> COMMAND_BREAK . ;

    ;               shift and go to state 59


state 25

    (46) expression -> - . expression
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 60

state 26

    (38) expression -> CHAR_LITERAL .

    .               reduce using rule 38 (expression -> CHAR_LITERAL .)
    BOOL_AND        reduce using rule 38 (expression -> CHAR_LITERAL .)
    BOOL_OR         reduce using rule 38 (expression -> CHAR_LITERAL .)
    -               reduce using rule 38 (expression -> CHAR_LITERAL .)
    *               reduce using rule 38 (expression -> CHAR_LITERAL .)
    /               reduce using rule 38 (expression -> CHAR_LITERAL .)
    +               reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_EQU        reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_NEQU       reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_LESS       reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_GTR        reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_LTE        reduce using rule 38 (expression -> CHAR_LITERAL .)
    COMP_GTE        reduce using rule 38 (expression -> CHAR_LITERAL .)
    ;               reduce using rule 38 (expression -> CHAR_LITERAL .)
    )               reduce using rule 38 (expression -> CHAR_LITERAL .)
    ,               reduce using rule 38 (expression -> CHAR_LITERAL .)
    ]               reduce using rule 38 (expression -> CHAR_LITERAL .)


state 27

    (31) expression -> COMMAND_RANDOM . ( expression )

    (               shift and go to state 61


state 28

    (8) statement -> expression ; .

    COMMAND_BREAK   reduce using rule 8 (statement -> expression ; .)
    ;               reduce using rule 8 (statement -> expression ; .)
    COMMAND_IF      reduce using rule 8 (statement -> expression ; .)
    COMMAND_WHILE   reduce using rule 8 (statement -> expression ; .)
    COMMAND_RANDOM  reduce using rule 8 (statement -> expression ; .)
    VAL_LITERAL     reduce using rule 8 (statement -> expression ; .)
    CHAR_LITERAL    reduce using rule 8 (statement -> expression ; .)
    STRING_LITERAL  reduce using rule 8 (statement -> expression ; .)
    -               reduce using rule 8 (statement -> expression ; .)
    !               reduce using rule 8 (statement -> expression ; .)
    (               reduce using rule 8 (statement -> expression ; .)
    COMMAND_PRINT   reduce using rule 8 (statement -> expression ; .)
    ID              reduce using rule 8 (statement -> expression ; .)
    TYPE            reduce using rule 8 (statement -> expression ; .)
    ALIAS_TYPE      reduce using rule 8 (statement -> expression ; .)
    META_TYPE       reduce using rule 8 (statement -> expression ; .)
    {               reduce using rule 8 (statement -> expression ; .)
    $end            reduce using rule 8 (statement -> expression ; .)
    }               reduce using rule 8 (statement -> expression ; .)
    COMMAND_ELSE    reduce using rule 8 (statement -> expression ; .)


state 29

    (35) expression -> expression BOOL_AND . expression
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 62

state 30

    (51) expression -> expression COMP_GTE . expression
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 63

state 31

    (24) expression -> expression . . ID ( )
    (25) expression -> expression . . ID ( expression )

    ID              shift and go to state 64


state 32

    (43) expression -> expression + . expression
    (23) expression -> . var_usage = expression
    (24) expression -> . expression . ID ( )
    (25) expression -> . expression . ID ( expression )
    (26) expression -> . var_usage ASSIGN_ADD expression
    (27) expression -> . var_usage ASSIGN_SUB expression
    (28) expression -> . var_usage ASSIGN_MULT expression
    (29) expression -> . var_usage ASSIGN_DIV expression
    (30) expression -> . var_usage
    (31) expression -> . COMMAND_RANDOM ( expression )
    (35) expression -> . expression BOOL_AND expression
    (36) expression -> . expression BOOL_OR expression
    (37) expression -> . VAL_LITERAL
    (38) expression -> . CHAR_LITERAL
    (39) expression -> . STRING_LITERAL
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression + expression
    (44) expression -> . expression COMP_EQU expression
    (45) expression -> . expression COMP_NEQU expression
    (46) expression -> . - expression
    (47) expression -> . ! expression
    (48) expression -> . expression COMP_LESS expression
    (49) expression -> . expression COMP_GTR expression
    (50) expression -> . expression COMP_LTE expression
    (51) expression -> . expression COMP_GTE expression
    (52) expression -> . ( expression )
    (21) var_usage -> . ID
    (22) var_usage -> . ID [ expression ]

    COMMAND_RANDOM  shift and go to state 27
    VAL_LITERAL     shift and go to state 3
    CHAR_LITERAL    shift and go to state 26
    STRING_LITERAL  shift and go to state 7
    -               shift and go to state 25
    !               shift and go to state 12
    (               shift and go to state 21
    ID              shift and go to state 22

    var_usage                      shift and go to state 15
    expression                     shift and go to state 65

state 33
